@@ -1,57 +1,62 @@
 package com.chenyue.mistplugin.commands.back;
 
-import com.chenyue.mistplugin.data.LocationManager;
+import com.chenyue.mistplugin.managers.LocationManager;
+import com.chenyue.mistplugin.utils.AbstractCommand;
 import com.chenyue.mistplugin.utils.StringUtils;
 import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class Back implements TabExecutor {
+public class Back extends AbstractCommand {
+    public static final String NAME = "Back";
+    public static String DESCRIPTION = "Teleport Back";
+    public static String PERMISSION = "mist.command.back";
+    public static String USAGE = "/back";
     private final LocationManager locationManager;
 
     public Back(LocationManager locationManager) {
+        super(NAME, DESCRIPTION, PERMISSION, USAGE);
         this.locationManager = locationManager;
     }
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, @NotNull String[] args) {
-        if (sender.hasPermission("mist.command.back")) {
-            if (!(sender instanceof Player)) {
-                StringUtils.sendConfigMessage(sender, "messages.playerOnly");
-                return true;
-            }
-            Player player = (Player) sender;
+        if (!this.hasPermission(sender)) {
+            this.noPermission(sender);
+            return true;
+        }
+        if (!(sender instanceof Player player)) {
+            this.playerOnly(sender);
+            return true;
+        }
 
-            try {
-                Location location = this.locationManager.getLocation(player.getUniqueId());
-                if (location == null) {
-                    StringUtils.sendConfigMessage(player, "messages.back.notFound");
-                    return true;
-                }
-                player.teleport(location);
-                player.setFallDistance(0);
-                StringUtils.sendConfigMessage(player, "messages.back.successful");
-                return true;
-            } catch (Exception e) {
-                e.printStackTrace();
-                StringUtils.sendConfigMessage(player, "messages.back.failed");
+        try {
+            Location location = this.locationManager.getLocation(player.getUniqueId());
+            if (location == null) {
+                StringUtils.sendConfigMessage(player, "messages.back.notFound");
                 return true;
             }
-        } else {
-            StringUtils.sendConfigMessage(sender, "messages.noPermission");
+            player.teleport(location);
+            player.setFallDistance(0);
+            StringUtils.sendConfigMessage(player, "messages.back.successful");
+            return true;
+        } catch (Exception e) {
+            e.printStackTrace();
+            StringUtils.sendConfigMessage(player, "messages.back.failed");
             return true;
         }
     }
 
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, @NotNull String[] args) {
-        return Arrays.asList();
+        return List.of();
     }
 }
+
+
+
